--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,14 @@
-@import url("https://fonts.googleapis.com/css2?family=Shrikhand&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap");
+@charset "UTF-8";
+/* Eléments principaux de la page */
+@import url("https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
-  font-family: "Roboto", Arial, sans-serif;
+  font-family: "DM Sans", Arial, sans-serif;
   font-weight: 400;
 }
 
