--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap');
 
 body {
-    font-family: "Roboto", Arial, sans-serif;
+    font-family: 'DM Sans', Arial, sans-serif;
     font-weight: 400;
   }
