--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -1,3 +1,14 @@
-@mixin button {
-    
+@mixin button-tag-white {
+    border-radius: 20px;
+    border: $color-border-button 0.5px solid;
+    text-decoration: none;
+    color: $color-primary;
+    font-weight: 700;
+    padding: 5px 10px;
+    box-sizing: border-box;
+    font-size: 0.7em;
+    &:hover {
+        background-color: $color-primary;
+        color: $color-white;
+    }
 }
