--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,6 +1,7 @@
-$colour-background-primary: #901C1C;
-$colour-primary: #D3573C;
-$colour-background-secondary: #D3573C;
-$colour-secondary: #525252;
-$colour-background-white: #fafafa;
-$colour-white: #ffffff;
+$color-primary: #901C1C;
+$color-secondary: #D3573C;
+$color-tertiary: #525252;
+$color-background-white: #fafafa;
+$color-white: #ffffff;
+$color-black: #000000;
+$color-border-button: #C4C4C4;
