--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,17 @@ body {
   font-weight: 400;
 }
 
+.content h1 {
+  text-align: right;
+  font-weight: 300;
+  color: #901C1C;
+  margin-right: 10%;
+  margin-top: -3.1%;
+  margin-bottom: 4%;
+}
+
 .header {
-  width: 70%;
+  width: 75%;
   display: flex;
   justify-content: space-evenly;
   margin-top: 40px;
