--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -18,7 +18,7 @@
         background-color: $color-secondary;
     }
     &__logo {
-        margin-right: 40px;
+        margin-left: 10px;
     }
     &__navigation {
         margin-top: 14px;
