--- a/css/style.css
+++ b/css/style.css
@@ -15,10 +15,35 @@ body {
 .content h1 {
   text-align: right;
   font-weight: 300;
+  font-size: 1.6em;
   color: #901C1C;
   margin-right: 10%;
   margin-top: -3.1%;
   margin-bottom: 4%;
+}
+.content__photographer__profile a {
+  text-decoration: none;
+}
+.content__photographer__profile h2 {
+  font-weight: 300;
+  font-size: 2.3em;
+  color: #D3573C;
+  margin-top: 3%;
+}
+.content__photographer__profile h3 {
+  font-weight: 300;
+  font-size: 0.85em;
+  margin: 1%;
+  color: #901C1C;
+}
+.content__photographer__profile p {
+  font-size: 0.8em;
+  font-weight: 500;
+}
+.content__photographer__profile h4 {
+  font-weight: 300;
+  font-size: 0.7em;
+  margin: 1%;
 }
 
 .header {
@@ -40,7 +65,7 @@ body {
   background-color: #D3573C;
 }
 .header__logo {
-  margin-right: 40px;
+  margin-left: 10px;
 }
 .header__navigation {
   margin-top: 14px;
@@ -65,6 +90,55 @@ body {
   color: #ffffff;
 }
 .header__navigation .sr-only {
+  border: 0;
+  clip: rect(0 0 0 0);
+  height: 1px;
+  margin: -1px;
+  overflow: hidden;
+  padding: 0;
+  position: absolute;
+  width: 1px;
+}
+
+.content__photographer {
+  display: flex;
+  flex-wrap: wrap;
+  row-gap: 60px;
+  margin-top: 6%;
+  margin-bottom: 6%;
+}
+.content__photographer__profile {
+  flex: 33%;
+  text-align: center;
+}
+.content__photographer__profile img {
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+  clip-path: ellipse(50% 50%);
+}
+.content__photographer__profile__tag ul {
+  display: flex;
+  column-gap: 5px;
+  justify-content: center;
+  list-style-type: none;
+  margin-top: 3%;
+}
+.content__photographer__profile__tag ul a {
+  border-radius: 20px;
+  border: #C4C4C4 0.5px solid;
+  text-decoration: none;
+  color: #901C1C;
+  font-weight: 700;
+  padding: 5px 10px;
+  box-sizing: border-box;
+  font-size: 0.7em;
+}
+.content__photographer__profile__tag ul a:hover {
+  background-color: #901C1C;
+  color: #ffffff;
+}
+.content__photographer__profile__tag ul .sr-only {
   border: 0;
   clip: rect(0 0 0 0);
   height: 1px;
