--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -42,3 +42,21 @@ body {
         }
     }
 }
+
+.content-photographer {
+    h2 {
+        font-size: 2.6em;
+        font-weight: 300;
+        color: $color-secondary;
+    }
+    h3 {
+        font-weight: 300;
+        font-size: 1.2em;
+        color: $color-primary;
+        margin: 4% 0%;
+    }
+    p {
+        font-size: 0.8em;
+        margin: 4% 0%;
+    }
+}
