Créa CSS div Like fixé en bas de page

--- a/css/style.css
+++ b/css/style.css
@@ -233,5 +233,24 @@ body {
   object-fit: cover;
   clip-path: ellipse(50% 50%);
 }
+.content-photographer__like {
+  display: flex;
+  justify-content: space-between;
+  background-color: #D3573C;
+  border-radius: 5px;
+  width: 20%;
+  padding: 0% 1.5%;
+  position: fixed;
+  bottom: 0px;
+  right: 60px;
+}
+.content-photographer__like p {
+  font-size: 1em;
+  font-weight: 500;
+}
+.content-photographer__like img {
+  width: 20px;
+  margin-left: -25%;
+}
 
 /*# sourceMappingURL=style.css.map */
