--- a/css/style.css
+++ b/css/style.css
@@ -64,6 +64,11 @@ body {
 .content-photographer h4 {
   font-size: 0.9em;
 }
+.content-photographer h5 {
+  font-size: 1.1em;
+  font-weight: 300;
+  color: #901C1C;
+}
 
 .header {
   width: 75%;
@@ -252,9 +257,13 @@ body {
   font-size: 1em;
   font-weight: 500;
 }
-.content-photographer__like img {
-  width: 20px;
+.content-photographer__like i {
+  width: 25px;
   margin-left: -25%;
+  margin-top: 5%;
+}
+.content-photographer__work {
+  margin-bottom: 5%;
 }
 .content-photographer__work__header {
   display: flex;
@@ -268,6 +277,31 @@ body {
   padding: 12px 16px 12px 24px;
   text-align: left;
   border-radius: 5px;
+}
+.content-photographer__work__photography {
+  display: flex;
+  flex-wrap: wrap;
+  column-gap: 80px;
+  row-gap: 40px;
+}
+.content-photographer__work__photography__content {
+  flex: 25%;
+}
+.content-photographer__work__photography__content img {
+  width: 100%;
+  height: 400px;
+  object-fit: cover;
+  border-radius: 5px;
+}
+.content-photographer__work__photography__content__title {
+  display: flex;
+  justify-content: space-between;
+  margin: 0.5% 1.5%;
+}
+.content-photographer__work__photography__content__title p {
+  margin: 0px;
+  color: #901C1C;
+  font-size: 1em;
 }
 
 /*# sourceMappingURL=style.css.map */
