--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -62,4 +62,9 @@ body {
     h4 {
         font-size: 0.9em;
     }
+    h5 {
+        font-size: 1.1em;
+        font-weight: 300;
+        color: $color-primary;
+    }
 }
