--- a/sass/pages/_photographer.scss
+++ b/sass/pages/_photographer.scss
@@ -52,12 +52,14 @@
             font-size: 1em;
             font-weight: 500;
         }
-        img {
-            width: 20px;
+        i {
+            width: 25px;
             margin-left: -25%;
+            margin-top: 5%;
         }
     }
     &__work {
+        margin-bottom: 5%;
         &__header {
             display: flex;
             column-gap: 1%;
@@ -69,6 +71,31 @@
                 padding: 12px 16px 12px 24px;
                 text-align: left;
                 border-radius: 5px;
+            }
+        }
+        &__photography {
+            display: flex;
+            flex-wrap: wrap;
+            column-gap: 80px;
+            row-gap: 40px;
+            &__content {
+                flex: 25%;
+                img {
+                    width: 100%;
+                    height: 400px;
+                    object-fit: cover;
+                    border-radius: 5px;
+                }
+                &__title {
+                    display: flex;
+                    justify-content: space-between;
+                    margin: 0.5% 1.5%;
+                    p {
+                        margin: 0px;
+                        color: $color-primary;
+                        font-size: 1em;
+                    }
+                }
             }
         }
     }
