Amélioration CSS home page responsive (mobile only)

--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -11,6 +11,9 @@
         background-color: $color-primary;
         color: $color-white;
     }
+    @include mobile-l-only {
+        padding: 2px 5px;
+    }
 }
 
 @mixin button-static {
