--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -5,6 +5,11 @@
     display: flex;
     justify-content: space-evenly;
     margin-top: 40px;
+    @include mobile-l-only {
+        flex-direction: column;
+        text-align: left;
+        width: 100%;
+    }
     &__help-nav {
         position: fixed;
         z-index: 1;
@@ -17,9 +22,16 @@
         font-weight: 700;
         font-size: 0.8em;
         background-color: $color-secondary;
+        @include mobile-l-only {
+            @include sr-only
+        }
     }
     &__logo {
         margin-left: 10px;
+        @include mobile-l-only {
+            transform: scale(0.6);
+            margin-left: -18%;
+        }
     }
     &__navigation {
         margin-top: 14px;
@@ -27,6 +39,15 @@
             display: flex;
             column-gap: 8px;
             list-style-type: none;
+            @include mobile-l-only {
+                flex-wrap: wrap;
+                justify-content: center;
+                row-gap: 10px;
+                padding: 0px 40px;
+            }
+            @include mobile-s-only {
+                padding: 0px 20px;
+            }
         }
         a {
             @include button-tag-white
