--- a/sass/utils/_mixins.scss
+++ b/sass/utils/_mixins.scss
@@ -8,3 +8,27 @@
     position: absolute;
     width: 1px;
 }
+
+@mixin mobile-s-only {
+    @media all and (max-width: map-get($breakpoints, mobile-s)) {
+        @content;
+    }
+}
+
+@mixin mobile-m-only {
+    @media all and (max-width: map-get($breakpoints, mobile-m)) {
+        @content;
+    }
+}
+
+@mixin mobile-l-only {
+    @media all and (max-width: map-get($breakpoints, mobile-l)) {
+        @content;
+    }
+}
+
+@mixin laptop {
+    @media all and (max-width: map-get($breakpoints, laptop)) {
+        @content;
+    }
+}
