--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,26 @@ body {
   margin-top: -3.1%;
   margin-bottom: 4%;
 }
+@media all and (max-width: 426px) {
+  .content h1 {
+    font-size: 0.8em;
+    margin-top: -23.5%;
+    margin-right: 4%;
+    margin-bottom: 35%;
+  }
+}
+@media all and (max-width: 376px) {
+  .content h1 {
+    margin-top: -25.5%;
+    margin-bottom: 37%;
+  }
+}
+@media all and (max-width: 320px) {
+  .content h1 {
+    margin-top: -30.5%;
+    margin-bottom: 42%;
+  }
+}
 .content__photographer__profile a {
   text-decoration: none;
 }
@@ -29,6 +49,11 @@ body {
   font-size: 2.3em;
   color: #D3573C;
   margin-top: 3%;
+}
+@media all and (max-width: 426px) {
+  .content__photographer__profile h2 {
+    font-size: 1.8em;
+  }
 }
 .content__photographer__profile h3 {
   font-weight: 300;
@@ -76,6 +101,13 @@ body {
   justify-content: space-evenly;
   margin-top: 40px;
 }
+@media all and (max-width: 426px) {
+  .header {
+    flex-direction: column;
+    text-align: left;
+    width: 100%;
+  }
+}
 .header__help-nav {
   position: fixed;
   z-index: 1;
@@ -89,8 +121,26 @@ body {
   font-size: 0.8em;
   background-color: #D3573C;
 }
+@media all and (max-width: 426px) {
+  .header__help-nav {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+}
 .header__logo {
   margin-left: 10px;
+}
+@media all and (max-width: 426px) {
+  .header__logo {
+    transform: scale(0.6);
+    margin-left: -18%;
+  }
 }
 .header__navigation {
   margin-top: 14px;
@@ -99,6 +149,19 @@ body {
   display: flex;
   column-gap: 8px;
   list-style-type: none;
+}
+@media all and (max-width: 426px) {
+  .header__navigation ul {
+    flex-wrap: wrap;
+    justify-content: center;
+    row-gap: 10px;
+    padding: 0px 40px;
+  }
+}
+@media all and (max-width: 320px) {
+  .header__navigation ul {
+    padding: 0px 20px;
+  }
 }
 .header__navigation a {
   border-radius: 20px;
@@ -113,6 +176,11 @@ body {
 .header__navigation a:hover {
   background-color: #901C1C;
   color: #ffffff;
+}
+@media all and (max-width: 426px) {
+  .header__navigation a {
+    padding: 2px 5px;
+  }
 }
 .header__navigation .sr-only {
   border: 0;
@@ -142,6 +210,11 @@ body {
   flex: 33%;
   text-align: center;
 }
+@media all and (max-width: 426px) {
+  .content__photographer__profile {
+    flex: 100%;
+  }
+}
 .content__photographer__profile img {
   width: 150px;
   height: 150px;
@@ -169,6 +242,11 @@ body {
 .content__photographer__profile__tag ul a:hover {
   background-color: #901C1C;
   color: #ffffff;
+}
+@media all and (max-width: 426px) {
+  .content__photographer__profile__tag ul a {
+    padding: 2px 5px;
+  }
 }
 .content__photographer__profile__tag ul .sr-only {
   border: 0;
@@ -214,6 +292,11 @@ body {
 .content-photographer__header__profile__tag ul a:hover {
   background-color: #901C1C;
   color: #ffffff;
+}
+@media all and (max-width: 426px) {
+  .content-photographer__header__profile__tag ul a {
+    padding: 2px 5px;
+  }
 }
 .content-photographer__header__profile__tag ul .sr-only {
   border: 0;
