--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -14,6 +14,20 @@ body {
         margin-right: 10%;
         margin-top: -3.1%;
         margin-bottom: 4%;
+        @include mobile-l-only {
+            font-size: 0.8em;
+            margin-top: -23.5%;
+            margin-right: 4%;
+            margin-bottom: 35%;
+        }
+        @include mobile-m-only {
+            margin-top: -25.5%;
+            margin-bottom: 37%;
+        }
+        @include mobile-s-only {
+            margin-top: -30.5%;
+            margin-bottom: 42%;
+        }
     }
     &__photographer__profile {
         a {
@@ -24,6 +38,9 @@ body {
             font-size: 2.3em;
             color: $color-secondary;
             margin-top: 3%;
+            @include mobile-l-only {
+                font-size: 1.8em;
+            }
         }
         h3 {
             font-weight: 300;
