--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,3 +5,10 @@ $color-background-white: #fafafa;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-border-button: #C4C4C4;
+
+$breakpoints: (
+    mobile-s: 320px,
+    mobile-m: 376px,
+    mobile-l:426px,
+    laptop: 1440px,
+)
