--- a/css/style.css
+++ b/css/style.css
@@ -76,6 +76,11 @@ body {
   font-weight: 300;
   color: #D3573C;
 }
+@media all and (max-width: 426px) {
+  .content-photographer h2 {
+    font-size: 1.6em;
+  }
+}
 .content-photographer h3 {
   font-weight: 300;
   font-size: 1.2em;
@@ -194,9 +199,22 @@ body {
 }
 
 .header-photographer {
-  margin-left: 4%;
+  margin-left: 4.5%;
   margin-top: 2%;
   margin-bottom: 3.5%;
+}
+.header-photographer svg {
+  transform: scale(1.3);
+}
+@media all and (max-width: 426px) {
+  .header-photographer svg {
+    transform: scale(0.9);
+  }
+}
+@media all and (max-width: 426px) {
+  .header-photographer {
+    margin-left: 17%;
+  }
 }
 
 .content__photographer {
@@ -268,8 +286,11 @@ body {
   justify-content: space-between;
   margin-bottom: 3%;
 }
-.content-photographer__header__profile {
-  margin-left: 3%;
+@media all and (max-width: 426px) {
+  .content-photographer__header__profile {
+    margin-left: 0%;
+    margin-bottom: 5%;
+  }
 }
 .content-photographer__header__profile__tag ul {
   display: flex;
@@ -321,11 +342,48 @@ body {
   padding: 16px 14px;
   font-size: 0.8em;
 }
+@media all and (max-width: 426px) {
+  .content-photographer__header__contact a {
+    padding: 8px 18px;
+    position: fixed;
+    z-index: 1;
+    bottom: 4%;
+    left: 35%;
+  }
+}
+@media all and (max-width: 376px) {
+  .content-photographer__header__contact a {
+    left: 32%;
+  }
+}
+@media all and (max-width: 320px) {
+  .content-photographer__header__contact a {
+    left: 30%;
+  }
+}
 .content-photographer__header__photo img {
   width: 150px;
   height: 150px;
   object-fit: cover;
   clip-path: ellipse(50% 50%);
+}
+@media all and (max-width: 426px) {
+  .content-photographer__header__photo img {
+    width: 100px;
+    height: 100px;
+  }
+}
+@media all and (max-width: 376px) {
+  .content-photographer__header__photo img {
+    width: 90px;
+    height: 90px;
+  }
+}
+@media all and (max-width: 320px) {
+  .content-photographer__header__photo img {
+    width: 80px;
+    height: 80px;
+  }
 }
 .content-photographer__like {
   display: flex;
@@ -337,6 +395,18 @@ body {
   position: fixed;
   bottom: 0px;
   right: 60px;
+}
+@media all and (max-width: 426px) {
+  .content-photographer__like {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
 }
 .content-photographer__like p {
   font-size: 1em;
@@ -355,6 +425,18 @@ body {
   column-gap: 1%;
   margin-bottom: 3%;
 }
+@media all and (max-width: 426px) {
+  .content-photographer__work__header {
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: 1px;
+    margin: -1px;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+  }
+}
 .content-photographer__work__header select {
   background-color: #901C1C;
   color: #ffffff;
@@ -372,11 +454,22 @@ body {
 .content-photographer__work__photography__content {
   flex: 25%;
 }
+@media all and (max-width: 426px) {
+  .content-photographer__work__photography__content {
+    flex: 100%;
+  }
+}
 .content-photographer__work__photography__content img {
   width: 100%;
   height: 400px;
   object-fit: cover;
   border-radius: 5px;
+}
+@media all and (max-width: 426px) {
+  .content-photographer__work__photography__content img {
+    height: 300px;
+    object-position: top;
+  }
 }
 .content-photographer__work__photography__content__title {
   display: flex;
