--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -65,6 +65,9 @@ body {
         font-size: 2.6em;
         font-weight: 300;
         color: $color-secondary;
+        @include mobile-l-only {
+            font-size: 1.6em;
+        }
     }
     h3 {
         font-weight: 300;
