--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -59,7 +59,16 @@
 }
 
 .header-photographer {
-    margin-left: 4%;
+    margin-left: 4.5%;
     margin-top: 2%;
     margin-bottom: 3.5%;
+    svg {
+        transform: scale(1.3);
+        @include mobile-l-only {
+            transform: scale(0.9);
+        }
+    }
+    @include mobile-l-only {
+        margin-left: 17%;
+    }
 }
