--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -5,6 +5,7 @@ $color-background-white: #fafafa;
 $color-white: #ffffff;
 $color-black: #000000;
 $color-border-button: #C4C4C4;
+$color-background-modal: rgba(196, 196, 196, 0.4);
 
 $breakpoints: (
     mobile-s: 320px,
