--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -88,3 +88,16 @@ body {
         color: $color-primary;
     }
 }
+
+.modal-contact__content {
+    h1 {
+        font-weight: 300;
+        font-size: 2.3em;
+    }
+    h2 {
+        font-weight: 300;
+        font-size: 2.3em;
+        margin-bottom: 4%;
+        color: $color-black;
+    }
+}
