--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "./layouts/header";
 @import "./layouts/footer";
+@import "./layouts/modal";
 
 @import "./pages/index";
 @import "./pages/photographer";
